{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 384,
  "lineage": "3853d940-9653-5d29-6d50-d1fd1f8f2fc6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:security-group/sg-0382e665a0ad7ea34",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0382e665a0ad7ea34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241218035051536100000004",
            "name_prefix": "terraform-",
            "owner_id": "941377148616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K-loud-alb-sg"
            },
            "tags_all": {
              "Name": "K-loud-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:security-group/sg-050604a28b126e13b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050604a28b126e13b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0382e665a0ad7ea34"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20241218053248855800000001",
            "name_prefix": "terraform-",
            "owner_id": "941377148616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K-loud-ecs-sg"
            },
            "tags_all": {
              "Name": "K-loud-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:security-group/sg-0e79d737b02681cc9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e79d737b02681cc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241218035051521000000002",
            "name_prefix": "terraform-",
            "owner_id": "941377148616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K-loud-private-sg"
            },
            "tags_all": {
              "Name": "K-loud-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sagemaker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:security-group/sg-0369a20970e48d8ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0369a20970e48d8ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20241218035051527500000003",
            "name_prefix": "terraform-",
            "owner_id": "941377148616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K-loud-sagemaker-sg"
            },
            "tags_all": {
              "Name": "K-loud-sagemaker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c8a7fbd964ee541",
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:elastic-ip/eipalloc-07c8a7fbd964ee541",
            "association_id": "eipassoc-07da4145eefc62398",
            "domain": "vpc",
            "id": "eipalloc-07c8a7fbd964ee541",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-04f9c0d7ab8059f93",
            "private_dns": "ip-10-0-3-53.ap-northeast-2.compute.internal",
            "private_ip": "10.0.3.53",
            "public_dns": "ec2-43-203-26-117.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.26.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "K-loud-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "K-loud-vpc-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:internet-gateway/igw-0d55688ce78e0a728",
            "id": "igw-0d55688ce78e0a728",
            "owner_id": "941377148616",
            "tags": {
              "Name": "K-loud-vpc-igw"
            },
            "tags_all": {
              "Name": "K-loud-vpc-igw"
            },
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c8a7fbd964ee541",
            "association_id": "eipassoc-07da4145eefc62398",
            "connectivity_type": "public",
            "id": "nat-04cc0115879865986",
            "network_interface_id": "eni-04f9c0d7ab8059f93",
            "private_ip": "10.0.3.53",
            "public_ip": "43.203.26.117",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035f33b3ba9d8515d",
            "tags": {
              "Name": "K-loud-vpc-nat-gateway"
            },
            "tags_all": {
              "Name": "K-loud-vpc-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:route-table/rtb-0055e2585d4aab260",
            "id": "rtb-0055e2585d4aab260",
            "owner_id": "941377148616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04cc0115879865986",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "K-loud-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "K-loud-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:route-table/rtb-03ff2cabcbe147fec",
            "id": "rtb-03ff2cabcbe147fec",
            "owner_id": "941377148616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d55688ce78e0a728",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "K-loud-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "K-loud-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0588a5207b075ab9e",
            "route_table_id": "rtb-0055e2585d4aab260",
            "subnet_id": "subnet-04ec5de829c3216c7"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a30116d51fb3d14",
            "route_table_id": "rtb-0055e2585d4aab260",
            "subnet_id": "subnet-0b24a20540637640a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053482680a628ab8f",
            "route_table_id": "rtb-03ff2cabcbe147fec",
            "subnet_id": "subnet-035f33b3ba9d8515d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078cbd176c7a88002",
            "route_table_id": "rtb-03ff2cabcbe147fec",
            "subnet_id": "subnet-0a41178296fdf9ed9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:subnet/subnet-04ec5de829c3216c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec5de829c3216c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941377148616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K-loud-vpc-private-subnet-0"
            },
            "tags_all": {
              "Name": "K-loud-vpc-private-subnet-0"
            },
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:subnet/subnet-0b24a20540637640a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b24a20540637640a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941377148616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K-loud-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "K-loud-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:subnet/subnet-035f33b3ba9d8515d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035f33b3ba9d8515d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941377148616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K-loud-vpc-public-subnet-0"
            },
            "tags_all": {
              "Name": "K-loud-vpc-public-subnet-0"
            },
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:subnet/subnet-0a41178296fdf9ed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a41178296fdf9ed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941377148616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K-loud-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "K-loud-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-041ee6ea677b14929"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377148616:vpc/vpc-041ee6ea677b14929",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01326ecb928d3f7d8",
            "default_route_table_id": "rtb-0b15b971839e00d46",
            "default_security_group_id": "sg-04a0a535db04edee3",
            "dhcp_options_id": "dopt-073b5aaee0a755df4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041ee6ea677b14929",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b15b971839e00d46",
            "owner_id": "941377148616",
            "tags": {
              "Name": "K-loud-vpc"
            },
            "tags_all": {
              "Name": "K-loud-vpc"
            }
          }
        }
      ]
    }
  ]
}